css/index.css
/* FONTS */
@import url('https://fonts.googleapis.com/css?family=Poppins:400,900&display=swap');
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
@import url('https://fonts.googleapis.com/css?family=Handlee&display=swap');

/* Blue: #4169e1 */

html, body {
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.navbar-title {
    font-family: "Poppins";
    font-weight: 900;
}

.bg-brave-blue {
    background-color: #4169e1;
}

.table-blue {
    background-color: #4169e1;
}

#main-image {
    width: 100vw;
    height: auto;
}

table {
    margin: 2em 0 0 0;
    width: 90vw;
    border-collapse: collapse;
    border: 2px solid #00000025;
    background-color: #ffffff;
    font-size: 1.2rem;
}

.table-wrapper {
    display: flex;
    justify-content: space-around;
}

table tr {
    text-align: center;
}

table tr:hover, #table-ext:hover {
    background-color: rgb(252, 252, 252);
}

td {
    border: none;
    height: 50px;
    vertical-align: middle;
    font-family: "Poppins";
    font-weight: 10;
}

th {
    background-color: #4169e1 !important;
    color: #ffffff;
    font-family: "Permanent Marker";
    font-weight: 200;
    font-size: 1.5rem;
    font-weight: 5000;
    border: none;
    height: 50px;
    vertical-align: middle;
}

.place {
    color: #4169e1;
    text-decoration: underline;
    font-weight: 600;
    cursor: pointer;
}

#table-ext {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 2em;
    border: 2px solid #00000025;
    border-top: none;
    height: 50px;
    margin: 0 0 5em 0;
}

#table-ext a {
    font-size: 1.25rem;
    color: #7494f1;
    text-decoration: none;
    font-weight: 600;
    cursor: pointer;
}

footer {
    background-color: #172d4d;
    position: relative;
    color: #ffffff;
    font-family: "Poppins";
}

.copyright p {
    margin: 0;
    color: #eeeeee6c;
}

footer .sections {
    padding: 1em 0 0 0;
    font-family: "Permanent Marker";
}

footer .sections li {
    font-family: "Poppins";
    font-weight: 100;
    font-style: italic;
}

footer .sections ul {
    margin: 1em 0 0 0;
}

footer .sections a {
    text-decoration: underline;
    font-style: italic;
}

.poppins {
    font-family: "Poppins";
}

.permanent-marker {
    font-family: "Permanent Marker";
}

#team img {
    width: 100%;
}

.new-section {
    margin-top: 9em;
}

.btn-brave-blue {
    background-color: #4169e1;
    color: #ffffff;
}

 .card {
    text-transform: uppercase;
    width: 85%;
    height: 21em;
    margin: 0 0 1em 0;
}

 .card h1 {
    font-family: "Poppins";
    padding: 0.5em;
    font-weight: 900;
    text-align: center;
}

 .card p {
    font-size: 1.5rem;
    font-family: "Poppins";
}

 .card-wrapper {
    display: flex;
    justify-content: space-around;
}

.no-btm-border {
    border-bottom: none;
}

/* Responsive Media Queries */
@media only screen and (max-width: 600px) {
    table td  {
        font-size: 1rem;
    }

    table th {
        font-size: 1.4rem;
    }
}

@media only screen and (max-width: 525px) {
    table td  {
        font-size: 0.9rem;
    }

    table th {
        font-size: 1.2rem;
    }
} 

@media only screen and (max-width: 400px) {
    table td  {
        font-size: 0.8rem;
    }

    table th {
        font-size: 1rem;
    }
}

